# ai-commit-writer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ai_commit_writer/: __init__.py
aicw/: cli.py  ollama.py
tests/: __init__.py  test_commit_writer.py  test_ollama.py
