[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-commit-writer"
version = "0.1.0"
description = "AI-powered commit message generator from git diffs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "toml>=0.10",
]
keywords = ["ai", "git", "commit", "ollama", "productivity"]

[project.scripts]
aicw = "aicw.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
