[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-commit-writer"
version = "1.0.0"
description = "AI-powered commit message generator from git diffs using Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["httpx>=0.27", "typer>=0.12", "rich>=13.0"]

[project.scripts]
ai-commit-writer = "ai_commit_writer:app"
